--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
     <div class="letter-close">
         <div class="envelope" onclick="open_letter()"></div>
         <h2 class="envelope-msg">봉투를 열어봐</h2>
+        <h3 class="envelope-msg">음악이 나오니 볼륨을 조정해주세요</h3>
     </div>
 
     <div class="letter-open">
